--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lemon"
                 android:text="ae "
-                android:textColor="@color/birdcolor"
+                android:textColor="@color/birdcolor2"
                 android:textSize="@dimen/sd32"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lemon"
                 android:text="naturals"
-                android:textColor="@color/birdcolor"
+                android:textColor="@color/birdcolor2"
                 android:textSize="@dimen/sd30"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
