--- a/app/src/main/res/layout/activity_create_invoide.xml
+++ b/app/src/main/res/layout/activity_create_invoide.xml
@@ -39,6 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:text="Invoice"
+
                     android:textColor="@color/white"
                     android:textSize="@dimen/sd16"
                     android:textStyle="bold" />
@@ -50,6 +51,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,6 +72,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:orientation="vertical"
                 android:padding="10dp">
 
