--- a/app/src/main/res/layout/activity_customer_cart.xml
+++ b/app/src/main/res/layout/activity_customer_cart.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".customers.CustomerCartActivity">
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-
     android:padding="@dimen/sd10"
     >
     <ImageView
