--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,7 +72,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-
+android:background="@color/white"
             android:paddingHorizontal="@dimen/sd20"
             android:paddingVertical="@dimen/sd12">
 
