--- a/app/src/main/res/layout/activity_msadd_appointment.xml
+++ b/app/src/main/res/layout/activity_msadd_appointment.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".myspalon.MSAddAppointmentActivity">
@@ -298,7 +299,7 @@
                         android:paddingVertical="10dp"
                         android:text="Save"
                         android:textAllCaps="true"
-                        android:textColor="@color/white"
+                        android:textColor="@color/darkgreen"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/appointment_cardView3" />
