--- a/app/src/main/res/layout/activity_msadd_beauticians.xml
+++ b/app/src/main/res/layout/activity_msadd_beauticians.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".myspalon.MSAddBeauticians">
 
@@ -257,7 +258,7 @@
                     android:paddingVertical="10dp"
                     android:text="Save"
                     android:textAllCaps="true"
-                    android:textColor="@color/white"
+                    android:textColor="@color/darkgreen"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/cardView3" />
