--- a/app/src/main/res/layout/activity_msadd_service.xml
+++ b/app/src/main/res/layout/activity_msadd_service.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".myspalon.MSAddServiceActivity">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -67,7 +68,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="ADD"
-    android:textColor="@color/white"
+    android:textColor="@color/darkgreen"
     android:id="@+id/ms_service_save"
     android:textStyle="bold"
     android:backgroundTint="@color/birdcolor"
