--- a/app/src/main/res/layout/activity_msbeauticians.xml
+++ b/app/src/main/res/layout/activity_msbeauticians.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".myspalon.MSBeauticians">
@@ -76,6 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/sd6"
+        android:textColor="@color/darkgreen"
         android:backgroundTint="@color/birdcolor"
         android:padding="@dimen/sd10"
         android:id="@+id/add_beauticians_btn"
