--- a/app/src/main/res/layout/adapter_dist_request.xml
+++ b/app/src/main/res/layout/adapter_dist_request.xml
@@ -4,11 +4,13 @@
     android:layout_width="match_parent"
     android:layout_margin="@dimen/sd8"
     app:cardCornerRadius="@dimen/sd8"
+    android:background="@color/white"
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:padding="@dimen/sd4"
+        android:background="@color/white"
         android:layout_height="wrap_content">
 
         <ImageView
