--- a/app/src/main/res/layout/adapter_pending_orders.xml
+++ b/app/src/main/res/layout/adapter_pending_orders.xml
@@ -4,12 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/sd16"
     android:layout_marginVertical="@dimen/sd2"
+    android:background="@color/white"
     android:layout_marginHorizontal="@dimen/sd8"
     android:backgroundTint="@color/lightgreen"
     android:layout_height="wrap_content">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/lightgreen"
     android:orientation="horizontal"
     android:gravity="center"
     android:paddingVertical="@dimen/sd12"
