--- a/app/src/main/res/layout/adapter_return_orderslayout.xml
+++ b/app/src/main/res/layout/adapter_return_orderslayout.xml
@@ -4,11 +4,13 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginVertical="@dimen/sd4"
+
     android:layout_marginHorizontal="@dimen/sd8"
     app:cardCornerRadius="@dimen/sd14">
 <LinearLayout
     android:layout_width="match_parent"
     android:padding="@dimen/sd14"
+    android:background="@color/lightgreen"
     android:orientation="horizontal"
     android:layout_height="wrap_content">
     <ImageView
