--- a/app/src/main/res/layout/adapterallproductsdesign.xml
+++ b/app/src/main/res/layout/adapterallproductsdesign.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_margin="@dimen/sd8"
+    android:background="@color/white"
     app:cardCornerRadius="@dimen/sd8"
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:padding="@dimen/sd8"
+        android:background="@color/white"
         android:layout_height="wrap_content">
 
         <ImageView
