--- a/app/src/main/res/layout/adapterbottomsectiondesign.xml
+++ b/app/src/main/res/layout/adapterbottomsectiondesign.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/sd10"
     android:background="@color/white"
+
     android:layout_margin="@dimen/sd8"
     app:cardBackgroundColor="@color/white"
     android:layout_height="wrap_content">
@@ -13,6 +14,7 @@
         android:layout_width="match_parent"
         android:paddingVertical="@dimen/sd16"
         android:paddingHorizontal="@dimen/sd20"
+        android:background="@color/white"
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
