--- a/app/src/main/res/layout/adaptermidsectiondesign.xml
+++ b/app/src/main/res/layout/adaptermidsectiondesign.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/sd10"
+    android:backgroundTint="@color/white"
     android:background="@color/white"
     android:layout_marginHorizontal="@dimen/sd8"
     android:layout_marginVertical="@dimen/sd6"
