--- a/app/src/main/res/layout/customer_topbarlayout.xml
+++ b/app/src/main/res/layout/customer_topbarlayout.xml
@@ -4,12 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:backgroundTint="@color/lightgreen"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingHorizontal="5dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:background="@color/lightgreen"
         android:layout_height="wrap_content"
         android:padding="@dimen/sd6">
 
