--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,14 +5,52 @@
         <item name="colorPrimary">@color/darkgreen</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.MaterialComponents.DayNight.NoActionBar.FullScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+    <style name="MyDatePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/darkgreen</item> <!-- set your desired accent color -->
+        <item name="buttonBarPositiveButtonStyle">@style/MyButtonStyle</item>
+        <item name="buttonBarNegativeButtonStyle">@style/MyButtonStyle</item>
+        <item name="colorPrimaryVariant">@color/midgreen</item>
+        <item name="colorOnPrimary">@color/darkgreen</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+    </style>
+
+    <style name="MyButtonStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">@color/darkgreen</item> <!-- set your desired text color -->
+    </style>
+
+    <style name="animation">
+        <item name="android:windowEnterAnimation">@android:anim/linear_interpolator</item>
+        <item name="android:windowExitAnimation">@android:anim/anticipate_interpolator</item>
+    </style>
+
+    <style name="GreenDatePicker" parent="@android:style/Widget.Material.Light.DatePicker">
+        <item name="android:calendarTextColor">@color/birdcolor</item>
+        <item name="android:headerBackground">@color/white</item>
+        <item name="android:textColorPrimary">@color/birdcolor</item>
+        <item name="android:textColorSecondary">@color/birdcolor</item>
+        <item name="android:textColor">@color/birdcolor</item>
+        <item name="android:yearListSelectorColor">@color/birdcolor</item>
+        <item name="android:datePickerMode">calendar</item>
+    </style>
+
+
 </resources>
