--- a/app/src/main/res/layout/activity_msadd_appointment.xml
+++ b/app/src/main/res/layout/activity_msadd_appointment.xml
@@ -88,9 +88,6 @@
                         android:background="@drawable/edittextborderwhite"
                         android:inputType="text"
                         android:minHeight="40dp"
-                        android:focusable="false"
-                        android:focusableInTouchMode="false"
-                        android:clickable="false"
                         android:cursorVisible="false"
                         android:padding="10dp" />
 
@@ -102,15 +99,16 @@
                         android:text="Customer Name"
                         android:textColor="@color/birdcolor" />
 
-                    <EditText
+                    <Spinner
                         android:id="@+id/appointment_input_fullname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="4dp"
                         android:background="@drawable/edittextborderwhite"
-                        android:hint="Customer name"
                         android:inputType="text"
+                        android:minHeight="40dp"
+                        android:cursorVisible="false"
                         android:padding="10dp" />
 
                     <!--  <TextView
@@ -272,10 +270,28 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
+                        android:text="Duration"
+                        android:textColor="@color/birdcolor" />
+
+                    <EditText
+                        android:id="@+id/appointment_durationET"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/edittextborderwhite"
+                        android:hint="Duration"
+                        android:inputType="text"
+                        android:padding="10dp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
                         android:text="Reason"
                         android:textColor="@color/birdcolor" />
 
                     <EditText
+                        android:id="@+id/appointment_reasonET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
