--- a/app/src/main/res/layout/productcategorydesign.xml
+++ b/app/src/main/res/layout/productcategorydesign.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
         <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/skincare"
             android:background="@drawable/custom_ripple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+    android:layout_marginHorizontal="@dimen/sd2"
             android:orientation="vertical"
             android:padding="@dimen/sd8">
 
