--- a/app/src/main/res/layout/customer_allitem_design.xml
+++ b/app/src/main/res/layout/customer_allitem_design.xml
@@ -16,7 +16,7 @@
         android:padding="@dimen/sd8">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/item_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginBottom="7dp"
@@ -33,11 +33,12 @@
             android:padding="@dimen/sd8"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView4"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/item_image"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5">
 
             <TextView
+                android:id="@+id/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Item Name"
@@ -46,6 +47,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/item_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/sd6"
@@ -54,6 +56,7 @@
                 android:textSize="@dimen/sd10" />
 
             <TextView
+                android:id="@+id/item_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/sd6"
