--- a/app/src/main/res/layout/customerall_items_section.xml
+++ b/app/src/main/res/layout/customerall_items_section.xml
@@ -43,7 +43,7 @@
         android:layout_margin="@dimen/sd6"
         android:id="@+id/customerallItemsRecycler"
         />
-    <androidx.recyclerview.widget.RecyclerView
+   <!-- <androidx.recyclerview.widget.RecyclerView
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -90,6 +90,6 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         android:layout_margin="@dimen/sd6"
-        android:id="@+id/customerEssentialOilsRV"
+        android:id="@+id/customerEss-->entialOilsRV"
         />
 </LinearLayout>
