--- a/app/src/main/res/layout/adaptercartitems.xml
+++ b/app/src/main/res/layout/adaptercartitems.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/cart_imageView"
             android:layout_width="80dp"
             android:layout_height="60dp"
             android:layout_marginBottom="7dp"
@@ -30,11 +30,12 @@
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/cart_imageView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5">
 
             <TextView
+                android:id="@+id/cart_itemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Item Name"
@@ -43,6 +44,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/cart_itemDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/sd6"
@@ -51,6 +53,7 @@
                 android:textSize="@dimen/sd10" />
 
             <TextView
+                android:id="@+id/cart_itemPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/sd6"
