card item list and CustomerHomeFrag and adapter

--- a/app/src/main/res/layout/customer_allitem_design.xml
+++ b/app/src/main/res/layout/customer_allitem_design.xml
@@ -32,7 +32,7 @@
             android:orientation="vertical"
             android:padding="@dimen/sd8"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView4"
+            app:layout_constraintEnd_toStartOf="@+id/imageView_addtocart"
             app:layout_constraintStart_toEndOf="@+id/item_image"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5">
