add to cart api

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -39,14 +39,15 @@
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:gravity="end"
-            android:orientation="horizontal">
+            android:layout_marginRight="@dimen/sd6"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lemon"
-                android:text="ae "
+                android:text="ae naturals"
                 android:textColor="@color/birdcolor2"
                 android:textSize="@dimen/sd32"
                 android:textStyle="bold"
@@ -58,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lemon"
-                android:text="naturals"
+                android:text="Beauty Connect"
                 android:textColor="@color/birdcolor2"
                 android:textSize="@dimen/sd30"
                 android:textStyle="bold"
