--- a/app/src/main/res/layout/adapter_pending_payments.xml
+++ b/app/src/main/res/layout/adapter_pending_payments.xml
@@ -20,7 +20,7 @@
     android:gravity="center"
     android:layout_height="wrap_content">
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/sellItemImage"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ae_product"
@@ -32,16 +32,19 @@
         android:orientation="vertical"
         >
 <TextView
+    android:id="@+id/customerName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textColor="@color/darkgreen"
     android:text="Customer Name"/>
         <TextView
+            android:id="@+id/productName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/darkgreen"
             android:text="Product Name X 30"/>
         <TextView
+            android:id="@+id/orderDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/darkgreen"
@@ -59,6 +62,7 @@
             android:src="@drawable/ic_rupeesmall"
             app:tint="@color/darkgreen" />
     <TextView
+        android:id="@+id/sellPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="320"
