add to cart api

--- a/app/src/main/res/layout/activity_customer_cart.xml
+++ b/app/src/main/res/layout/activity_customer_cart.xml
@@ -114,6 +114,7 @@
             android:layout_height="wrap_content"
             android:text="Confirm Order"
             android:padding="@dimen/sd10"
+            android:id="@+id/customer_chekout_button"
             android:gravity="center"
             android:textColor="@color/darkgreen"
             android:textStyle="bold"
