--- a/app/src/main/res/layout/fragment_cust_performance_frag.xml
+++ b/app/src/main/res/layout/fragment_cust_performance_frag.xml
@@ -8,6 +8,11 @@
     android:orientation="vertical"
     tools:context=".customers.fragments.Cust_performance_frag">
 
+    <LinearLayout
+        android:id="@+id/llhidden"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -144,6 +149,23 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="not enough data to show the chart"
+            android:textSize="20sp"
+            android:textColor="@color/darkgreen"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:textAlignment="center"/>
+    </LinearLayout>
 
 
 
