--- a/app/src/main/res/layout/customer_allitem_design.xml
+++ b/app/src/main/res/layout/customer_allitem_design.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_marginHorizontal="@dimen/sd8"
-    android:background="@color/lightbirdcolor"
+    android:backgroundTint="@color/lightbirdcolor"
     android:layout_marginVertical="@dimen/sd4"
     app:cardCornerRadius="@dimen/sd8"
     android:layout_height="wrap_content">
