--- a/app/src/main/res/layout/adapterallproductsdesign.xml
+++ b/app/src/main/res/layout/adapterallproductsdesign.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_margin="@dimen/sd8"
-    android:background="@color/white"
+    android:backgroundTint="@color/white"
     app:cardCornerRadius="@dimen/sd8"
     android:layout_height="wrap_content">
 
