--- a/app/src/main/res/layout/adaptercartitems.xml
+++ b/app/src/main/res/layout/adaptercartitems.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/sd8"
-    android:background="@color/white"
+    android:backgroundTint="@color/white"
     app:cardCornerRadius="@dimen/sd8">
 
     <androidx.constraintlayout.widget.ConstraintLayout
