--- a/app/src/main/res/layout/adaptersellerdesign.xml
+++ b/app/src/main/res/layout/adaptersellerdesign.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/sd10"
-    android:background="@color/white"
+    android:backgroundTint="@color/white"
     android:layout_margin="@dimen/sd8"
     app:cardBackgroundColor="@color/white"
     android:layout_height="wrap_content">
