--- a/app/src/main/res/layout/dist_checkout_layout.xml
+++ b/app/src/main/res/layout/dist_checkout_layout.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_margin="@dimen/sd8"
     app:cardCornerRadius="@dimen/sd8"
+    android:backgroundTint="@color/white"
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
