--- a/app/src/main/res/layout/fragment_add_salesman.xml
+++ b/app/src/main/res/layout/fragment_add_salesman.xml
@@ -85,7 +85,7 @@
                             android:layout_marginVertical="5dp"
                             android:layout_weight="1"
                             android:background="@drawable/loginedittextbg"
-                            android:hint="First Name"
+                            android:hint="Full Name"
                             android:imeOptions="actionNext"
                             android:inputType="textPersonName"
                             android:padding="@dimen/sd8" />
@@ -96,6 +96,7 @@
                             android:layout_marginHorizontal="@dimen/sd10"
                             android:layout_marginVertical="5dp"
                             android:layout_weight="1"
+                            android:visibility="gone"
                             android:background="@drawable/loginedittextbg"
                             android:hint="Last Name"
                             android:imeOptions="actionNext"
@@ -109,7 +110,7 @@
                         android:layout_marginHorizontal="@dimen/sd10"
                         android:layout_marginVertical="5dp"
                         android:background="@drawable/loginedittextbg"
-                        android:hint="Mobile Number"
+                        android:hint="Contact Number"
                         android:imeOptions="actionNext"
                         android:inputType="number"
                         android:padding="@dimen/sd8" />
@@ -146,6 +147,17 @@
                         android:autofillHints="emailAddress"
                         android:background="@drawable/loginedittextbg"
                         android:hint="pan - no"
+                        android:imeOptions="actionDone"
+                        android:inputType="textEmailAddress"
+                        android:padding="@dimen/sd8" />
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/sd10"
+                        android:layout_marginVertical="5dp"
+                        android:autofillHints="emailAddress"
+                        android:background="@drawable/loginedittextbg"
+                        android:hint="Aadhaar number"
                         android:imeOptions="actionDone"
                         android:inputType="textEmailAddress"
                         android:padding="@dimen/sd8" />
