--- a/app/src/main/res/layout/adaptersellerdesign.xml
+++ b/app/src/main/res/layout/adaptersellerdesign.xml
@@ -29,6 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Rajesh G"
+                android:id="@+id/SL_name"
                 android:textColor="@color/darkgreen"
                 android:textSize="@dimen/sd14"
                 android:textStyle="bold" />
@@ -37,6 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/sd6"
+                android:id="@+id/SL_email"
                 android:text="rajeshisamazing@gmail.com"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sd10" />
@@ -45,6 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/sd6"
+                android:id="@+id/SL_mobile"
                 android:text="+91 828383838"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sd10" />
@@ -53,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/sd6"
+                android:visibility="gone"
                 android:text="RR nagar Banglore"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sd10" />
@@ -61,6 +65,7 @@
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:id="@+id/SL_image"
             android:src="@drawable/ic_ticketseller"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
